; ModuleID = '/home/carl/AnghaBench/freebsd/usr.bin/iscsictl/extr_iscsictl.c_kernel_remove.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.bin/iscsictl/extr_iscsictl.c_kernel_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.target = type { i32 }
%struct.iscsi_session_remove = type { i32 }

@ISCSISREMOVE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [13 x i8] c"ISCSISREMOVE\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %struct.target*)* @kernel_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @kernel_remove(i32 %0, %struct.target* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.target*, align 8
  %5 = alloca %struct.iscsi_session_remove, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store %struct.target* %1, %struct.target** %4, align 8
  %7 = call i32 @memset(%struct.iscsi_session_remove* %5, i32 0, i32 4)
  %8 = getelementptr inbounds %struct.iscsi_session_remove, %struct.iscsi_session_remove* %5, i32 0, i32 0
  %9 = load %struct.target*, %struct.target** %4, align 8
  %10 = call i32 @conf_from_target(i32* %8, %struct.target* %9)
  %11 = load i32, i32* %3, align 4
  %12 = load i32, i32* @ISCSISREMOVE, align 4
  %13 = call i32 @ioctl(i32 %11, i32 %12, %struct.iscsi_session_remove* %5)
  store i32 %13, i32* %6, align 4
  %14 = load i32, i32* %6, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %2
  %17 = call i32 @xo_warn(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0))
  br label %18

18:                                               ; preds = %16, %2
  %19 = load i32, i32* %6, align 4
  ret i32 %19
}

declare dso_local i32 @memset(%struct.iscsi_session_remove*, i32, i32) #1

declare dso_local i32 @conf_from_target(i32*, %struct.target*) #1

declare dso_local i32 @ioctl(i32, i32, %struct.iscsi_session_remove*) #1

declare dso_local i32 @xo_warn(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
